Additional styles to fix side menu collapses properly

--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -2,11 +2,19 @@
 {
     display: flex;
     flex-direction: row;
-    width: 400px;
     max-width: 400px;
     border-right: 3px solid var(--secondary);
-    flex-grow: 1;
-    flex-shrink: 0;
+    flex-shrink: 1;
+}
+
+.SideBarContainer > .CollapsiblePanel
+{
+    width: 336px;
+}
+
+.SideBarContainer > .CollapsiblePanel.Collapsed
+{
+    width: 0px;
 }
 
 .SideBarMenu
